<resources>
    <string name="app_name">Calculator</string>
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="value_6">6</string>
    <string name="value_7">7</string>
    <string name="value_8">8</string>
    <string name="value_9">9</string>
    <string name="value_0">0</string>
    <string name="value_dot">.</string>
    <string name="value_plus">+</string>
    <string name="value_minus">-</string>
    <string name="value_multiply">x</string>
    <string name="value_divide">/</string>
    <string name="value_mod">%</string>
    <string name="value_equals">=</string>
    <string name="value_clear">C</string>
    <string name="value_clear_all">AC</string>
</resources>